# MOROS-PROTOK-EGZEKUCJI

./: .gitignore  MANIFEST.md  MANIFEST_STATUS_ARCHITEKTA.md  README.md  manifest.md  pyproject.toml  signatures.json
.github/workflows/: antivirus-scan.yml
frontend/: index.html  script.js  styles.css
src/moros_protok/: antivirus.py  extensions.py  main.py
tests/: test_antivirus.py
