[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moros-protok-egzekucji"
version = "0.0.1"
description = "Minimal scaffold for MOROS-PROTOK-EGZEKUCJI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
moros-protok = "moros_protok.main:main"
